--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,85 +1,30 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 
-type Props = CollectionEntry<'blog'>['data'];
-
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { post } = Astro.props;
+const { title, pubDate, updatedDate, heroImage, tags = [] } = post.data;
 ---
 
-<html lang="en">
-	<head>
-		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 1em;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				margin-bottom: 1em;
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
-			}
-		</style>
-	</head>
-
-	<body>
-		<Header />
-		<main>
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
-					</div>
-					<slot />
-				</div>
-			</article>
-		</main>
-		<Footer />
-	</body>
-</html>
+<article class="bg-white shadow-md rounded-lg overflow-hidden transition-shadow duration-300 hover:shadow-lg">
+  <a href={`/blog/${post.slug}/`} class="block">
+    {heroImage && <img src={heroImage} alt="" class="w-full h-32 object-cover" />}
+    <div class="p-3">
+      <h2 class="text-lg font-semibold text-gray-800 mb-1 truncate">{title}</h2>
+      <FormattedDate date={pubDate} />
+      <p class="text-gray-600 mt-1 text-sm line-clamp-2">{post.data.description}</p>
+    </div>
+  </a>
+  {tags.length > 0 && (
+    <div class="px-3 pb-3 flex flex-wrap gap-1">
+      {tags.map((tag) => (
+        <a 
+          href={`#${tag}`}
+          class="post-tag bg-gray-200 px-2 py-0.5 rounded-full text-s text-center text-gray-700 hover:bg-red-600 hover:text-white transition duration-300"
+          data-tag={tag}
+        >
+          {tag}
+        </a>
+      ))}
+    </div>
+  )}
+</article>
