--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,111 +1,71 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
+import Layout from '../../layouts/Layout.astro';
+import BlogPost from '../../layouts/BlogPost.astro';
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
-);
+const posts = await getCollection('blog');
+const tags = posts.map((post) => post.data.tags || []).flat();
+const uniqueTags = [...new Set(tags)];
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+<Layout title="Blog">
+  <div class="flex flex-wrap gap-2 mb-4" id="tags" data-tags={uniqueTags}>
+    <button data-type="all" class="filter-button active" id="blogFilter">
+      Show All
+    </button>
+    {uniqueTags.map((tag) => (
+      <button data-type={tag} class="filter-button" id="blogFilter">
+        {tag}
+      </button>
+    ))}
+  </div>
+  
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    {posts.map((post) => (
+      <div class={`blog-post ${post.data.tags ? post.data.tags.join(" ") : ""}`}>
+        <BlogPost post={post} />
+      </div>
+    ))}
+  </div>
+
+  <script>
+    function filterBlogs(tag) {
+      const buttons = document.querySelectorAll("#blogFilter");
+      buttons.forEach((button) => {
+        button.classList.toggle("active", button.getAttribute("data-type") === tag);
+      });
+
+      document.querySelectorAll('.blog-post').forEach((el) => {
+        el.style.display = (tag === "all" || el.classList.contains(tag)) ? "block" : "none";
+      });
+    }
+
+    // Event listener for the button click
+    document.querySelectorAll("#blogFilter").forEach((button) => {
+      button.addEventListener("click", (e) => filterBlogs(e.currentTarget.getAttribute("data-type")));
+    });
+
+    // Event delegation for tag clicks within blog posts
+    document.addEventListener('click', (e) => {
+      if (e.target.classList.contains('post-tag')) {
+        e.preventDefault();
+        filterBlogs(e.target.getAttribute('data-tag'));
+      }
+    });
+  </script>
+</Layout>
+
+<style>
+  .filter-button {
+    @apply text-gray-800 bg-gray-200 px-3 py-1 rounded-full text-sm transition duration-300;
+  }
+  .filter-button:hover {
+    @apply bg-red-600 text-white;
+  }
+  .filter-button.active {
+    @apply bg-red-400 text-black;
+  }
+  .blog-post {
+    @apply block;
+  }
+</style>
