--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,9 @@ import HeaderLink from './HeaderLink.astro';
     <a href="/" class="text-2xl font-bold text-accent">My Knowledge Blog</a>
     <nav class="hidden md:block">
       <HeaderLink href="/blog">Blog</HeaderLink>
+      <HeaderLink href="/projects">Projects</HeaderLink> <!-- New Projects link -->
       <HeaderLink href="/about">About</HeaderLink>
-      <HeaderLink href="/tags">Tags</HeaderLink>
+      <!-- Removed Tags link -->
     </nav>
     <button id="mobileMenuToggle" class="md:hidden">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
@@ -18,8 +19,8 @@ import HeaderLink from './HeaderLink.astro';
   </div>
   <nav id="mobileMenu" class="hidden mt-4 md:hidden">
     <HeaderLink href="/blog">Blog</HeaderLink>
+    <HeaderLink href="/projects">Projects</HeaderLink> <!-- New Projects link -->
     <HeaderLink href="/about">About</HeaderLink>
-    <HeaderLink href="/tags">Tags</HeaderLink>
   </nav>
 </header>
 
