--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import Sidebar from '../components/Sidebar.astro';
 import '../styles/global.css';
 
 const { title } = Astro.props;
+const currentPath = Astro.url.pathname;
 ---
 
 <html lang="en">
@@ -14,9 +16,11 @@ const { title } = Astro.props;
   </head>
   <body class="flex flex-col min-h-screen bg-background text-text-primary">
     <Header />
-    <main class="flex-grow container mx-auto px-4 py-8">
+    <main class="flex-grow container mx-auto px-4 pt-4 pb-12">
       <slot />
     </main>
+
+    <Sidebar currentPath={currentPath} />
     <Footer />
   </body>
 </html>
